[gd_scene load_steps=39 format=2]

[ext_resource path="res://entities/player/player.gd" type="Script" id=1]
[ext_resource path="res://entities/weapons/shitty_gun.gd" type="Script" id=2]
[ext_resource path="res://entities/weapons/shitty_gun.png" type="Texture" id=3]
[ext_resource path="res://entities/player/goblin/art/goblin_idle2.png" type="Texture" id=4]
[ext_resource path="res://entities/player/goblin/art/goblin_idle7.png" type="Texture" id=5]
[ext_resource path="res://entities/player/goblin/art/goblin_idle6.png" type="Texture" id=6]
[ext_resource path="res://entities/player/goblin/art/goblin_hand.png" type="Texture" id=7]
[ext_resource path="res://entities/player/goblin/art/goblin_walk7.png" type="Texture" id=8]
[ext_resource path="res://entities/player/goblin/art/goblin_walk3.png" type="Texture" id=9]
[ext_resource path="res://entities/player/goblin/art/goblin_walk4.png" type="Texture" id=10]
[ext_resource path="res://entities/player/goblin/art/goblin_idle1.png" type="Texture" id=11]
[ext_resource path="res://entities/player/goblin/art/goblin_walk5.png" type="Texture" id=12]
[ext_resource path="res://entities/player/goblin/art/goblin_walk1.png" type="Texture" id=13]
[ext_resource path="res://entities/player/goblin/art/goblin_idle4.png" type="Texture" id=14]
[ext_resource path="res://entities/player/goblin/art/goblin_walk2.png" type="Texture" id=15]
[ext_resource path="res://entities/player/goblin/art/goblin_idle3.png" type="Texture" id=16]
[ext_resource path="res://entities/player/goblin/art/goblin_idle5.png" type="Texture" id=17]
[ext_resource path="res://entities/player/goblin/art/goblin_walk6.png" type="Texture" id=18]
[ext_resource path="res://entities/weapons/Bullet.tscn" type="PackedScene" id=19]
[ext_resource path="res://entities/player/goblin/art/circle..png" type="Texture" id=21]
[ext_resource path="res://entities/player/goblin/art/hurt/goblin_idle6.png" type="Texture" id=22]
[ext_resource path="res://entities/player/goblin/art/hurt/goblin_idle4.png" type="Texture" id=23]
[ext_resource path="res://entities/player/goblin/art/hurt/goblin_idle1.png" type="Texture" id=24]
[ext_resource path="res://entities/player/goblin/art/hurt/goblin_idle7.png" type="Texture" id=25]
[ext_resource path="res://entities/player/goblin/art/hurt/goblin_idle5.png" type="Texture" id=26]
[ext_resource path="res://entities/player/goblin/art/hurt/goblin_idle2.png" type="Texture" id=27]
[ext_resource path="res://entities/player/goblin/art/hurt/goblin_idle3.png" type="Texture" id=28]
[ext_resource path="res://entities/player/goblin/art/hurt/goblin_walk2.png" type="Texture" id=29]
[ext_resource path="res://entities/player/goblin/art/hurt/goblin_walk4.png" type="Texture" id=30]
[ext_resource path="res://entities/player/goblin/art/hurt/goblin_walk5.png" type="Texture" id=31]
[ext_resource path="res://entities/player/goblin/art/hurt/goblin_walk3.png" type="Texture" id=32]
[ext_resource path="res://entities/player/goblin/art/hurt/goblin_walk6.png" type="Texture" id=33]
[ext_resource path="res://entities/player/goblin/art/hurt/goblin_walk7.png" type="Texture" id=34]
[ext_resource path="res://entities/player/goblin/art/hurt/goblin_walk1.png" type="Texture" id=35]

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.6666
height = 117.333

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 22 ), ExtResource( 25 ) ],
"loop": true,
"name": "idle_hurt",
"speed": 15.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 29 ), ExtResource( 32 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "walk_hurt",
"speed": 15.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "gun",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 513.016

[node name="Player" type="Area2D"]
position = Vector2( 487, 244 )
script = ExtResource( 1 )
speed = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 21 )
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 2 )

[node name="player_sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )
animation = "walk_hurt"

[node name="shitty_gun" type="AnimatedSprite" parent="."]
position = Vector2( 1.99997, 21 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 3 )
animation = "gun"
offset = Vector2( 101.334, -2.66669 )
script = ExtResource( 2 )
base_properties = {
"bullet_damage": 2,
"bullet_speed": 2000,
"magazine_current": 5,
"magazine_max": 10,
"name": "ShittyGun",
"num_bullets": 1,
"reload_time": 0.75,
"time_between_shots": 0.5
}
Bullet = ExtResource( 19 )

[node name="bullet_spawn" type="Position2D" parent="shitty_gun"]
position = Vector2( 153.333, -17.3333 )

[node name="GoblinHand" type="Sprite" parent="shitty_gun"]
position = Vector2( 52, 16 )
z_index = -1
texture = ExtResource( 7 )

[node name="PickupArea" type="Area2D" parent="."]

[node name="PickupCollision" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 21 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="area_entered" from="PickupArea" to="." method="_on_PickupArea_area_entered"]
